# iverson

./: .gitignore  ARCHITECTURE.md  DECISION_LOOP.md  README.md  main.py  pyproject.toml  skills-lock.json
agents/: base.py  distance.py  iverson_v25.py  iverson_v3.py  iverson_v35.py  random_baseline.py  rules.py  saliency.py  skill_bank.py  state_graph.py
collectors/: minigrid_collector.py  puzzle_collector.py  sokoban_collector.py
docs/: Phase-0a-Decision.md  Phase-0c-Audit-Amendment.md  Phase-0c-Audit.md  Phase-1-First-Results.md  Phase-1-Honest-Closure.md  Phase-2-Plan.md  v3.5-Honest-Closure.md  v3.5-Spec.md
docs/kaggle/: DATA.md  OVERVIEW.md
docs/opinions/: Interventional-World-Modeling.md
models/: __init__.py  action_effects.py  dataset.py  discretize.py  exploration.py  loss.py  object_list.py  planning.py  smart_cell_select.py  symbolic_memory.py  terminal_predictor.py  trajectory.py  undo_reasoning.py  world_model.py
models/converters/: __init__.py  arc_agi_3.py  minigrid.py  puzzle.py  sokoban.py
scripts/: audit_corpus.py  collect_minigrid.py  collect_puzzles.py  collect_sokoban.py  eval_predictor.py  inspect_corpus.py  inspect_objects.py  predictor_diagnostics.py  profile_minigrid_envs.py  replay_game.py  run_baseline.py  tiny_train_test.py  train_predictor.py
tests/: test_object_list.py  test_predictor.py  test_trajectory.py
