[project]
name = "iverson2"
version = "0.1.0"
description = "ARC-AGI-3 agent (v2.5 baseline → v3 terminal-state-prediction)"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "arc-agi>=0.9.1",
    "numpy>=2.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "torch>=2.4",
    "requests>=2.32",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff.lint]
extend-select = ["I"]
